# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-06-15 22:02:51 GMT	John Goerzen <jgoerzen@complete.org>	patch-30

    Summary:
      Working on compose-based funcs
    Revision:
      missinglib--head--0.0--patch-30


    modified files:
     ChangeLog libsrc/compose/composeoper.ml
     libsrc/compose/composeoper.mli
     libsrc/hashtblutil/hashtblutil.ml libsrc/strutil/strutil.ml


2004-06-15 21:52:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-29

    Summary:
      Start of compose support
    Revision:
      missinglib--head--0.0--patch-29


    new files:
     libsrc/compose/.arch-ids/=id libsrc/compose/compose.ml
     libsrc/compose/compose.mli libsrc/compose/composeoper.ml
     libsrc/compose/composeoper.mli

    modified files:
     ChangeLog libsrc/Makefile

    new directories:
     libsrc/compose libsrc/compose/.arch-ids


2004-06-05 17:06:49 GMT	John Goerzen <jgoerzen@complete.org>	patch-28

    Summary:
      This is 0.4.0
    Revision:
      missinglib--head--0.0--patch-28


    new files:
     libsrc/fileutil/.arch-ids/=id libsrc/fileutil/fileutil.ml
     libsrc/fileutil/fileutil.mli

    modified files:
     ChangeLog debian/changelog libsrc/Makefile

    new directories:
     libsrc/fileutil libsrc/fileutil/.arch-ids


2004-06-05 16:52:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-27

    Summary:
      Removed file/ directory -- was never built anyway
    Revision:
      missinglib--head--0.0--patch-27


    removed files:
     libsrc/file/.arch-ids/=id libsrc/file/file.ml

    modified files:
     ChangeLog

    removed directories:
     libsrc/file libsrc/file/.arch-ids


2004-06-05 16:51:14 GMT	John Goerzen <jgoerzen@complete.org>	patch-26

    Summary:
      Added split_ws and tests
    Revision:
      missinglib--head--0.0--patch-26


    modified files:
     ChangeLog debian/changelog debian/control